<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="enter">Enter Something</string>
    <string name="show">Display what the user enters</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="hesay">\He says \</string>
    <string name="shesay">\She says \</string>
</resources>